shady-KISS-skin History
-------------------------------------------

2016-05-28:
- Added Zapcockpit

2016-05-24:
- Adjusted position of timericons
- Added italian translation (provided by fiveten_59@vdrportal)

2016-05-20:
- Adjustments for timerstates in timermenus and displaychannel
- Removed setup for epg2vdr-skdPatch

2016-05-11:
- Reimplemented 'isRecording' and added 'current- and nextrecording' in displaychannel
- Added icon for remotetimers in mainmenu

2016-05-08:
- Fixes for epg2vdr and running timers

2016-05-03:
- Show even local hostname in epg2vdr-menu Timer

2016-05-02:
- Added setup for number of hostnamechars in epg2vdr-menu Timer
- Removed areascroll of fritzbox-separators
- Added separators in skinsetup for plugins

2016-04-20:
- Added setup for epg2vdrShowHostname
- Added setup if skindesigner is patched for epg2vdr

2016-04-18:
- New icons for remote-timer

2016-04-17:
- First steps with epg2vdr
- Fixed patch for epg2vdr

2016-04-15:
- Added svgtemplates/skinparts for compatibility with skindesigner-0.9.6
- Modified ratingstars for plugplex
- Reworked plug-plex-detail
- New arrow for plex-trailer

2016-04-07:
- Added marker for switchtimer in tvguideng

2016-04-05:
- Filled bottommost line of OSD with Black (workaround for .....?)
- Reduced size if coloured markers
- Removed debug

2016-04-04:
- Small fix for timeredit
- Added setup for channelname in displaychannel
- Enlarged height of channelpanel

2016-04-02:
- Fixed timerconflictmenu

2016-03-31:
- Fixed condition with recordingedit

2016-03-30:
- Added rewind- and fastforward-speed in controliconsmodeonly

2016-03-29:
- Changed optional bright cutmarks in displayreplay
- Added rewind- and fastforward-speed

2016-03-26:
- Some more stuff for plex II
- Added setup-submenu für pluginspecific settings
- Added optional bright background for replayprogressbar

2016-03-19:
- Added thumbs for extras in plug-plex-detail

2016-03-18:
- Some more stuff for plex

2016-03-16: