@@ -46,9 +46,35 @@
 			<area condition="{separator}++not{fritzbox}" x="1%" width="94%" transparency="{transLists}" layer="3">
 				<drawimage x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonFullSeparator" />
 			</area>
-			<area condition="{separator}++not{fritzbox}++not{zaphistory}++not{timeredit}++not{recordingedit}" x="1%" width="94%" layer="4">
+			<area condition="{separator}++not{fritzbox}++not{zaphistory}++not{timeredit}++not{recordingedit}++not{column3pb}++not{column2set}" x="1%" width="94%" layer="4">
 				<drawtext align="center" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{column1}" />
 			</area>
+			
+			<area condition="{separator}++{setup}++{column2set}" x="3%" width="47%" layer="4">
+				<drawtext align="left" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{column1}" />
+			</area>
+			<area condition="{separator}++{setup}++{column2set}" x="50%" width="43%" layer="4">
+				<drawtext align="right" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{column2}" />
+			</area>
+<!--separators-bgprocess-->
+			<area x="4%" condition="{separator}++{column3pb}" width="3%" layer="4">
+				<drawtext align="left" valign="center" font="{light}" fontsize="70%" width="99%" color="{clrLightGray}" text="{column1}" />
+			</area>
+			<area x="8%" condition="{separator}++{column3pb}" width="9%" layer="4">
+				<drawtext align="left" valign="center" font="{light}" fontsize="70%" width="99%" color="{clrLightGray}" text="{column2}" />
+			</area>
+			<area x="17%" condition="{separator}++{column3pb}" width="{areawidth}*0.135" layer="4">
+				<drawimage x="0" y="0" valign="center" width="{areawidth}" height="{areaheight}*0.35" imagetype="skinpart" path="sysinfoPB" />
+				<drawimage x="{column3pbsize}*2.6" y="0" valign="center" width="{column3pbtotalsize}*2.6-{column3pbsize}*2.6" height="{areaheight}*0.35" imagetype="skinpart" path="sysinfoPBMask" />
+				<drawimage x="0" y="0" valign="center" width="1" height="{areaheight}*0.35" imagetype="skinpart" path="sysinfoPBMaskEnd" />
+				<drawimage x="{areawidth}-1" y="0" valign="center" width="1" height="{areaheight}*0.35" imagetype="skinpart" path="sysinfoPBMaskEnd" />
+			</area>
+			<area x="31%" condition="{separator}++{column3pb}" width="5%" layer="4">
+				<drawtext align="right" valign="center" font="{light}" fontsize="70%" width="99%" color="{clrLightGray}" text="{column4}" />
+			</area>
+			<area x="40%" condition="{separator}++{column3pb}" width="50%" layer="4">
+				<drawtext align="left" valign="center" font="{light}" fontsize="70%" width="99%" color="{clrLightGray}" text="{column5}" />
+			</area>				
 <!--separators-fritzbox-Anrufdetails-->
 			<area condition="{separator}++{fritzbox}" x="1%" width="94%" transparency="{transLists}" layer="3">
 				<drawimage condition="not{current}" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonLong1" />
@@ -170,13 +196,13 @@
 				<drawimage x="{areawidth}-1" y="0" valign="center" width="1" height="{areaheight}*0.35" imagetype="skinpart" path="sysinfoPBMaskEnd" />
 			</area>
 <!--mail-plugin-->
-			<area x="4%" condition="not{separator}++{mailbox}" width="6%" layer="4">
+			<area x="4%" condition="{mailbox}" width="6%" layer="4">
 				<drawtext align="left" valign="center" font="{light}" fontsize="70%" width="99%" color="{clrLightGray}" text="{column1}" />
 			</area>
-			<area x="10%" condition="not{separator}++{mailbox}" width="53%" layer="4">
+			<area x="10%" condition="{mailbox}" width="53%" layer="4">
 				<drawtext align="left" valign="center" font="{light}" fontsize="70%" width="99%" color="{clrLightGray}" text="{column2}" />
 			</area>
-			<area x="63%" condition="not{separator}++{mailbox}" width="35%" layer="4">
+			<area x="63%" condition="{mailbox}" width="30%" layer="4">
 				<drawtext align="left" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{column3}" />
 			</area>
 <!--neutrinoepg with channelnumbers-->
