@@ -1,6 +1,9 @@
 shady-KISS-skin History
 -------------------------------------------
 
+2017-05-25:
+- Fixed separators with two columns and separators in mailbox-plugin
+
 2016-05-28:
 - Added Zapcockpit
 
